apps/openspeedtest/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3001
